--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "firebase": "^7.5.0",
     "gatsby": "^2.18.17",
     "gatsby-plugin-firebase": "^0.1.6",
+    "gatsby-plugin-google-analytics": "^2.1.31",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-styled-components": "^3.1.14",
     "gatsby-source-filesystem": "^2.1.39",
     "gatsby-transformer-remark": "^2.6.38",
