--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "firebase": "^7.5.0",
     "gatsby": "^2.18.17",
     "gatsby-plugin-firebase": "^0.1.6",
-    "gatsby-plugin-google-analytics": "^2.1.31",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "gatsby-plugin-styled-components": "^3.1.14",
+    "gatsby-plugin-use-query-params": "^1.0.1",
     "gatsby-source-filesystem": "^2.1.39",
     "gatsby-transformer-remark": "^2.6.38",
     "prop-types": "^15.7.2",
@@ -28,7 +28,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.2.2",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "use-query-params": "^1.1.6"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
